# PizzaTime-Server

./: .gitignore  .~lock.PizzaParty - IDP-FE Guide.pptx#  .~lock.PizzaParty - PizzaEngine Guide.pptx#  Dockerfile  PizzaParty - Arch.pptx  PizzaParty - Gateway Guide.pptx  PizzaParty - IDP-FE Guide.pptx  PizzaParty - Presentazione.pptx  PizzaParty - Project Review 1.pptx  PizzaTimeService.sln  build.gradle.kts  cluster_deployer.py  container.session.sql  settings.gradle.kts
Database/: prepare.sql  prova.sql
Docker/: Service.dockerfile  composer.py  docker-compose.yml  requirements.txt
Kubernetes/: KongIngress.yaml  PersistentVolumes.yaml  PizzaEnginePod.yaml  PizzaFrontEnd.yaml  PizzaGateway.yaml  PizzaIdpPod.yaml  PizzaOrderService.yaml  RabbitMqPod.yaml
PizzaTime.Api.Rust/: Cargo.toml  build.rs
PizzaTime.Api.Rust/src/: main.rs
PizzaTime.Api.Rust/src/Controllers/: login.rs
PizzaTime.Api.Rust/src/data/: databridge.rs  example.rs  mod.rs  user.rs
PizzaTime.Api.Rust/src/data/messages/: authmessage.rs  mod.rs
PizzaTime.Bridge/: Bridge.cs  PizzaTime.Bridge.csproj
PizzaTime.Common/: build.gradle.kts
PizzaTime.Communication/: build.gradle.kts  settings.gradle.kts
PizzaTime.ComponentTests/: PizzaTime.ComponentTests.csproj  Program.cs  TestEnvironment.cs
PizzaTime.Data/: Configuration.cs  Crypto.cs  Order.cs  Party.cs  Pizza.cs  PizzaTime.Data.csproj  Pizzeria.cs  User.cs
PizzaTime.Database/: DockerFile  prepare.sql
PizzaTime.Frontend/: .gitignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
(+339 files in other folders)
