[package]
name = "PizzaTime_Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
copy_dir="*"

[dependencies]
tokio={version = "*", features = ["full"]}
tokio-postgres="*"
rocket={version = "*",features = ["json"]}


